--- a/abstratlibrary/build.gradle
+++ b/abstratlibrary/build.gradle
@@ -39,3 +39,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+afterEvaluate{
+    publishing {
+        publications {
+            release(MavenPublication){
+                from components.release
+
+                groupId = 'com.github.francis-anane'
+                artifactId = 'abstratlibrary'
+                version = '1.0.0'
+            }
+        }
+    }
+}
